# goit-web_hw-module-10

./: .env_example  .gitignore  pyproject.toml
quotes_project/app_quote/: context_processors.py  forms.py  models.py  scrap.py  urls.py  views.py
quotes_project/app_quote/migrations/: 0001_initial.py  0002_alter_quote_author.py  0003_alter_quote_tags.py  0004_tag_remove_quote_tags_quote_tags.py  0005_alter_tag_name.py  0006_quote_created_by.py  0007_alter_quote_created_by.py
quotes_project/app_quote/static/app_quote/: main.css
quotes_project/app_quote/templates/app_quote/: add-author.html  add-quote.html  author.html  base.html  edit-quote.html  index.html  my-quotes.html  panel.html  search.html
quotes_project/app_user/: forms.py  urls.py  views.py
quotes_project/app_user/templates/app_user/: logout.html  panel.html  password_reset_complete.html  password_reset_done.html  password_reset_email.html  signin.html  signup.html
quotes_project/media/seeds/: authors.json
quotes_project/quotes_project/: conf.py  settings.py  urls.py
