[tool.poetry]
name = "goit-web-hw-module-10"
version = "0.1.0"
description = ""
authors = ["Deminform <deminform@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
pillow = "^10.4.0"
psycopg2 = "^2.9.9"
dateparser = "^1.2.0"
scrapy = "^2.11.2"
django-redis = "^5.4.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
